--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,3 +1,6 @@
+* {
+  font-size: 16px;
+}
 body {
   background: #eee;
   font-family: sans-serif;
@@ -7,21 +10,31 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 10px;
 }
 
 .title {
   background: #e3f4ff;
+  display: block;
+  padding: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 10px 0px;
+  padding: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 10px 0;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  padding: 10px 20px;
+  margin-left: 130px;
 }
